# async-google-apis

async-google-apis-common/: Cargo.toml
async-google-apis-common/src/: http.rs  lib.rs  multipart.rs
example_crates/calendar_example/: Cargo.toml
example_crates/calendar_example/src/: main.rs
example_crates/calendar_example_with_proxy/: Cargo.toml
example_crates/calendar_example_with_proxy/src/: calendar_v3_types.rs  main.rs
generate/: templates.py
