[package]
name = "async-google-apis-common"
version = "0.5.0"
authors = ["Lewin Bormann <lewin@lewin-bormann.info>"]
edition = "2018"
keywords = ["rest", "google", "async", "api"]
description = "Shared code for the async-google-apis generated code."
homepage = "https://github.com/dermesser/async-google-apis"
repository = "https://github.com/dermesser/async-google-apis"
license = "MIT"
documentation = "https://docs.rs/async-google-apis-common"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "~1.0"
chrono = { version = "~0.4.23", default-features = false, features = ["clock", "std", "serde"] }
futures = "~0.3"
http-body-util = "0.1.2"
hyper = { version = "1" }
hyper-util = "0.1.8"
log = "~0.4"
percent-encoding = "~2.1"
pin-project = "~1.0"
radix64 = "~0.6"
serde = "~1.0"
serde_json = "~1.0"
tokio = { version = "1.0", features = ["fs"] }
tokio-stream = "^0.1"
tower-service = "0.3.3"
yup-oauth2 = "^11.0"
