[package]
name = "calendar_example"
version = "0.1.0"
authors = ["Daniel Boline <ddboline@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-google-apis-common = { path = "../../async-google-apis-common/" }

anyhow = "~1.0"
serde = "~1.0"
env_logger = "~0.8"
hyper = { version = "1" }
tokio = { version = "1", features = ["macros", "io-util", "rt", "rt-multi-thread", "fs"] }
http-body-util = "0.1.2"
hyper-http-proxy = "1.0.0"
