[package]
name = "calendar_example"
version = "0.1.0"
authors = ["Daniel Boline <ddboline@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-google-apis-common = { path = "../../async-google-apis-common/" }

anyhow = "~1.0"
serde = "~1.0"
env_logger = "~0.8"
hyper = { version = "1" }
tokio = { version = "1", features = ["macros", "io-util", "rt", "rt-multi-thread", "fs"] }
hyper-http-proxy = { version = "1.0.0", default-features = false, features = ["native-tls"]}
yup-oauth2 = { version = "11.0.0", default-features = false, features = ["hyper-tls"] }
